# cloth-ecommerce-rs

./: .env  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.dev.yml
migrations/: 20260201025635_init_schema.sql  20260201125417_product_img.sql  20260201153143_user.sql  20260204132850_cart_and_address.sql  20260204132850_cart_order_and_address.sql  20260213042017_create_user_otps_table.sql
src/: app.rs  app_state.rs  config.rs  error.rs  main.rs  telemetry.rs
src/domain/models/: cart.rs  mod.rs  product.rs  products.rs  user.rs
src/infra/repositories/: product_repo.rs
src/infrastructure/: mod.rs
src/infrastructure/db/: postgres.rs
src/infrastructure/mail/: mod.rs  resend.rs  smtp.rs
src/infrastructure/redis/: client.rs
src/infrastructure/storage/: r2.rs
src/modules/: mod.rs
src/modules/admin/: dto.rs  handler.rs  repository.rs  route.rs  service.rs
src/modules/auth/: dto.rs  error.rs  guard.rs  handler.rs  mod.rs  repository.rs  route.rs  service.rs
src/modules/cart/: dto.rs  handler.rs  mod.rs  model.rs  route.rs  service.rs
src/modules/category/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  route.rs  service.rs
src/modules/order/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  route.rs  service.rs
src/modules/product/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  route.rs  service.rs
src/modules/user/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  route.rs  service.rs
src/modules/user/domain/: error.rs  mod.rs  password.rs
src/repositories/: mod.rs
src/routes/: mod.rs  routes.rs
src/shared/ports/: mail.rs
src/shared/services/: email_sample.rs  email_template.rs  jwt.rs  mod.rs  password.rs  redis_service.rs
src/shared/utils/: flattern_error.rs  mod.rs
tests/sql/: category_resurcsive.sql
