[package]
name = "axum-ecommerce"
version = "0.1.0"
edition = "2024"

[dependencies]

# web framework
axum = "0.8.8"
tower = "0.5"
tower-http = {version = "0.6.8", features = ["fs","trace","cors", "compression-full", "request-id"]}

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Database
sqlx = {version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid","migrate", "bigdecimal"]}

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Auth & Security
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
bcrypt = "0.18"
uuid = {version = "1.0", features = ["serde", "v4", "fast-rng"]}

# Validation
validator = {version = "0.20", features = ["derive"]}

# Time
chrono = {version = "0.4", features = ["serde"]}

#Enviroment management
dotenvy = "0.15.7"

# Tracing & Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0.100"
thiserror = "2.0.18"

# Others
bigdecimal = {version ="0.4.10", features = ["serde"]}

# hashing password
argon2 = {version="0.5", features = ["std"]}

# rand number
rand_core = {version="0.6", features = ["std"]}
rand = "0.10.0"

# logging
log = "0.4.29"

# mail smtp
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }
async-trait = "0.1.89"
resend-rs = "0.21.0"
email_address = "0.2.9"

reqwest = {version = "0.13.1", features = ["json"]}
redis = {version = "1.0.3", features = ["tokio-comp"]}
base64 = "0.22.1"
deadpool-redis = "0.23.0"

[dev-dependencies]
